--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@
   * Add 'stdout=[0|1]' option, which defines whether to log messages to stdout.
   * Add 'progress_counter=[0|1]' option for the client, which defines whether
     to print counters to stdout.
+  * When syslogging, do not prepend a date to the log message.
 
 2012-08-28 Changes in burp-1.3.12:
   * Remove 'forward' timestamp references in backup directories, to allow the
