Don't count phase 2 counters twice when resuming.

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -359,7 +359,7 @@ Synonym for lockfile.
 Log to syslog. Defaults to off.
 .TP
 \fBstdout=[0|1]\fR
-Log to syslog. Defaults to on.
+Log to stdout. Defaults to on.
 .TP
 \fBprogress_counter=[0|1]\fR
 Print progress counters on stdout. Defaults to on.
