--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@
   * Add 'progress_counter=[0|1]' option for the client, which defines whether
     to print counters to stdout.
   * When syslogging, do not prepend a date to the log message.
+  * Don't count phase 2 counters twice when resuming.
 
 2012-08-28 Changes in burp-1.3.12:
   * Remove 'forward' timestamp references in backup directories, to allow the
