* Ignore files in clientconfdir starting with '.' or ending with '~', as     these are hidden or temporary files.

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -506,7 +506,7 @@ Open all block devices for reading and back up the contents as if they were regu
 
 .SH SERVER CLIENTCONFDIR FILE
 .TP
-For the server to know about clients that can contact it, you need to place a file named after the client in clientconfdir.
+For the server to know about clients that can contact it, you need to place a file named after the client in clientconfdir. Files beginning with '.' or ending with '~' are ignored. Directories are also ignored.
 .TP
 The file name must match the name in the 'cname' field on the client.
 .TP
