--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,8 @@
     to print counters to stdout.
   * When syslogging, do not prepend a date to the log message.
   * Don't count phase 2 counters twice when resuming.
+  * Ignore files in clientconfdir starting with '.' or ending with '~', as
+    these are hidden or temporary files.
 
 2012-08-28 Changes in burp-1.3.12:
   * Remove 'forward' timestamp references in backup directories, to allow the
