--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,8 @@
   * Don't count phase 2 counters twice when resuming.
   * Ignore files in clientconfdir starting with '.' or ending with '~', as
     these are hidden or temporary files.
+  * Fix bug where the client_can_* options were not being overridden in the
+    client specific conf files.
 
 2012-08-28 Changes in burp-1.3.12:
   * Remove 'forward' timestamp references in backup directories, to allow the
