--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,7 @@
   * Scan the manifest before restore/verify so that counters and status
     monitor can show estimates.
   * Add verify/restore notifications.
+  * Fix Windows batch file IF/ELSE syntax in Windows autoupgrade script.
 
 2012-08-28 Changes in burp-1.3.12:
   * Remove 'forward' timestamp references in backup directories, to allow the
