--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,6 +17,7 @@
   * Have the server send the client the counters when resuming.
   * Have the server send the client the counters when verifying/restoring, so
     that it knows what to expect.
+  * Avi Rozen's bug fix for directory browsing on windows
 
 2012-08-28 Changes in burp-1.3.12:
   * Remove 'forward' timestamp references in backup directories, to allow the
