--- a/CHANGELOG
+++ b/CHANGELOG
@@ -18,6 +18,9 @@
   * Have the server send the client the counters when verifying/restoring, so
     that it knows what to expect.
   * Avi Rozen's bug fix for directory browsing on windows
+  * Do not skip restores of sockets.
+  * Add server_can_restore=[0|1] client side option, so that clients can refuse
+    server initiated restores.
 
 2012-08-28 Changes in burp-1.3.12:
   * Remove 'forward' timestamp references in backup directories, to allow the
