--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -400,6 +400,9 @@ Synonym for ssl_key_password.
 \fBssl_peer_cn=[string]\fR
 Must match the common name in the SSL certificate that the server gives when it connects. If ssl_peer_cn is not set, the server name will be used instead.
 .TP
+\fBserver_can_restore=[0|1]\fR
+To prevent the server from initiating restores, set this to 0. The default is 1.
+.TP
 \fBencryption_password=[password]\fR
 Set this to enable client side file Blowfish encryption. If you do not want encryption, leave this field out of your config file. \fBIMPORTANT:\fR Configuring this renders delta differencing pointless, since the smallest real change to a file will make the whole file look different. Therefore, activating this option turns off delta differencing so that whenever a client file changes, the whole new file will be uploaded on the next backup. \fBALSO IMPORTANT:\fR If you manage to lose your encryption password, you will not be able to unencrypt your files. You should therefore think about having a copy of the encryption password somewhere off-box, in case of your client hard disk failing. \fBFINALLY:\fR If you change your encryption password, you will end up with a mixture of files on the server with different encryption and it may become tricky to restore more than one file at a time. For this reason, if you change your encryption password, you may want to start a fresh chain of backups (by moving the original set aside, for example). Burp will cope fine with turning the same encryption password on and off between backups, and will restore a backup of mixed encrypted and unencrypted files without a problem.
 .TP
@@ -572,7 +575,7 @@ You can queue a backup on the server, to be performed when the client next makes
 
 .SH Server initiated restores
 .TP
-You can queue a restore on the server, to be performed when the client next makes contact. To do this, you put a file called 'restore' into the top level of the client storage directory. Valid fields to include in the restore file are:
+You can queue a restore on the server, to be performed when the client next makes contact. To do this, you put a file called 'restore' into the top level of the client storage directory. The client can deny server initiated restores by setting "server_can_restore=0" in its burp.conf. Valid fields to include in the restore file are:
 .TP
 \fBbackup=[number|a]\fR
 The number of the backup to restore from. Equivalent to '\-b' when initiating a restore from the client.
