--- a/CHANGELOG
+++ b/CHANGELOG
@@ -21,6 +21,8 @@
   * Do not skip restores of sockets.
   * Add server_can_restore=[0|1] client side option, so that clients can refuse
     server initiated restores.
+  * Allow server_can_restore and encryption_password to be set with the Windows
+    installer.
 
 2012-08-28 Changes in burp-1.3.12:
   * Remove 'forward' timestamp references in backup directories, to allow the
