--- a/CHANGELOG
+++ b/CHANGELOG
@@ -25,6 +25,8 @@
     installer.
   * Indicate to the server post script whether there was an error.
   * Indicate to the server post script whether a timed backup was attempted.
+  * Add the ability to restore using a different client. See the
+    'restore_client' option in the man page.
 
 2012-08-28 Changes in burp-1.3.12:
   * Remove 'forward' timestamp references in backup directories, to allow the
