--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,6 +27,9 @@
   * Indicate to the server post script whether a timed backup was attempted.
   * Add the ability to restore using a different client. See the
     'restore_client' option in the man page.
+  * Add the ability to exclude compression on files by extension. See the
+    'exclude_comp' option in the man page.
+  * Make the functions that strcmp file extensions more efficient.
 
 2012-08-28 Changes in burp-1.3.12:
   * Remove 'forward' timestamp references in backup directories, to allow the
