--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -489,6 +489,9 @@ Extensions to include in the backup. Case insensitive. Nothing else will be incl
 \fBexclude_ext=[extension]\fR
 Extensions to exclude from the backup. Case insensitive. You can have multiple exclude extension lines. For example, set 'vdi' to exclude VirtualBox disk images.
 .TP
+\fBexclude_comp=[extension]\fR
+Extensions to exclude from compression. Case insensitive. You can have multiple exclude compression lines. For example, set 'gz' to exclude gzipped files from compression.
+.TP
 \fBexclude_fs=[fstype]\fR
 File systems to exclude from the backup. Case insensitive. You can have multiple exclude file system lines. For example, set 'tmpfs' to exclude tmpfs. Burp has an internal mapping of file system names to file system IDs. If you know the file system ID, you can use that instead. For example, 'exclude_fs = 0x01021994' will also exclude tmpfs.
 .TP
