--- a/CHANGELOG
+++ b/CHANGELOG
@@ -30,6 +30,8 @@
   * Add the ability to exclude compression on files by extension. See the
     'exclude_comp' option in the man page.
   * Make the functions that strcmp file extensions more efficient.
+  * Fixed bug introduced in 1.3.12 that made the client crash when scanning
+    files with very long names.
 
 2012-08-28 Changes in burp-1.3.12:
   * Remove 'forward' timestamp references in backup directories, to allow the
