--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2012-09-28 Changes in burp-1.3.14:
   * Remove '-l <logfile> / logfile=' options because they didn't work properly
     and were adding too much complexity to the code.
   * Add 'stdout=[0|1]' option, which defines whether to log messages to stdout.
