--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+  * Important bug fix for exclude_comp.
+
 2012-09-28 Changes in burp-1.3.14:
   * Remove '-l <logfile> / logfile=' options because they didn't work properly
     and were adding too much complexity to the code.
