--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
+2012-10-09 Changes in burp-1.3.16:
   * Important bug fix for exclude_comp.
+  * Bug fix for read_blockdev.
+  * Add 'version_warn=[0|1]' option.
 
 2012-09-28 Changes in burp-1.3.14:
   * Remove '-l <logfile> / logfile=' options because they didn't work properly
