--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -201,10 +201,13 @@ On the server, defines whether to keep hardlinked files in the backups, or wheth
 On the server, the number of times that a single file can be hardlinked. The bedup program also obeys this setting. The default is 10000.
 .TP
 \fBlibrsync=[0|1]\fR
-When set to 0, delta differencing will not take place. That is, when a file changes, the server will request the whole new file. The default is 1. This option can be overridden by the client configuration files in clientconfdif on the server.
+When set to 0, delta differencing will not take place. That is, when a file changes, the server will request the whole new file. The default is 1. This option can be overridden by the client configuration files in clientconfdir on the server.
 .TP
 \fBcompression=gzip[0-9]\fR
-Choose the level of gzip compression. Setting 0 or gzip0 turns compression off. The default is gzip9. This option can be overridden by the client configuration files in clientconfdif on the server.
+Choose the level of gzip compression. Setting 0 or gzip0 turns compression off. The default is gzip9. This option can be overridden by the client configuration files in clientconfdir on the server.
+.TP
+\fBversion_warn=[0|1]\fR
+When this is on, which is the default, a warning will be issued when the client version does not match the server version. This option can be overridden by the client configuration files in clientconfdir on the server.
 .TP
 \fBclient_lockdir=[path]\fR
 Path to the directory in which to keep per-client lock files. By default, this is set to the path given by the 'directory' option.
@@ -540,6 +543,7 @@ Additionally, the following options can be overridden here for each client:
 \fBkeep\fR
 \fBworking_dir_recovery_method\fR
 \fBlibrsync\fR
+\fBversion_warn\fR
 \fBsyslog\fR
 \fBclient_can_force_backup\fR
 \fBclient_can_list\fR
