--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+  * Turn --enable-ipv6 configure option into --disable-ipv6.
+
 2012-10-09 Changes in burp-1.3.16:
   * Important bug fix for exclude_comp.
   * Bug fix for read_blockdev.
