* If no timebands are given to timer_script, default to not allowing a     backup.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,8 @@
   * Remove version_warn debug.
   * Tweaks to the test script.
   * Store Windows VSS data separately to the actual file data.
+  * If no timebands are given to timer_script, default to not allowing a
+    backup.
 
 2012-10-09 Changes in burp-1.3.16:
   * Important bug fix for exclude_comp.
