--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@
   * Option to strip Windows VSS headers from the actual file data.
   * If no timebands are given to timer_script, default to not allowing a
     backup.
+  * Add LC_TIME=C to LANG=C in the timer script.
 
 2012-10-09 Changes in burp-1.3.16:
   * Important bug fix for exclude_comp.
