Improvements to VSS stripping/splitting.

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -84,6 +84,9 @@ which to match backup files. Use it for lists and restores.
 .TP
 \fB\-s\fR \fB[number]\fR
 For use with restores \- strip a number of leading path components.
+.TP
+\fB\-x\fR
+For Windows clients only - do not use the Windows VSS API on restore. Give this option when you are restoring a backup that contains no VSS information.
 
 .SH EXAMPLES
 .TP
@@ -529,7 +532,7 @@ Open all block devices for reading and back up the contents as if they were regu
 When backing up Windows computers, this option allows you to save the VSS header data separate from the file data. The default is off, which means that the VSS header data is saved prepended to the file data.
 .TP
 \fBstrip_vss=[0|1]\fR
-When backing up Windows computers, this option allows you to prevent the VSS header data being backed up. The default is off. WARNING: If you turn this on, you cannot currently restore the backed up files to Windows via the burp client, because the burp client tries to use the VSS interface.
+When backing up Windows computers, this option allows you to prevent the VSS header data being backed up. The default is off. To restore a backup that has no VSS information on Windows, you need to give the client the '-x' command line option.
 
 .SH SERVER CLIENTCONFDIR FILE
 .TP
