--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,8 @@
   * If no timebands are given to timer_script, default to not allowing a
     backup.
   * Add LC_TIME=C to LANG=C in the timer script.
+  * Add 'vss_strip' program, which is a tool for extracting the file data from
+    a file containing both VSS data and the file data.
 
 2012-10-09 Changes in burp-1.3.16:
   * Important bug fix for exclude_comp.
