--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2012-11-02 Changes in burp-1.3.18:
   * Turn --enable-ipv6 configure option into --disable-ipv6.
   * Print a carriage return when rewriting ssl_peer_cn on Windows.
   * Make all places that log 'out of memory' also log the function name.
