--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+  * Added Patrick Koppen's burp_ca patches.
+
 2012-12-18 Changes in burp-1.3.20:
   * Bug fix for split/strip_vss = 1 on the client side always causing all files
     to be backed up.
