--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+  * Bug fix for strip_vss/split_vss truncating backups of changed files on
+    Windows.
+
 2013-01-02 Changes in burp-1.3.22:
   * Contributions from Avi Rozen:
 	+ Added a '-j' option to format the long file list as JSON. Intended
