--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
   * Bug fix for strip_vss/split_vss truncating backups of changed files on
     Windows.
+  * Bug fix for autoupgrade failing on Windows if autoupgrade_dir has been
+    modified.
 
 2013-01-02 Changes in burp-1.3.22:
   * Contributions from Avi Rozen:
