--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@
   * Bug fix for autoupgrade failing on Windows if autoupgrade_dir has been
     modified.
   * Bug fix for listing backups created with split_vss=1.
+  * Bug fix for Debian init do_stop() function from Peter Maloney.
 
 2013-01-02 Changes in burp-1.3.22:
   * Contributions from Avi Rozen:
