--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,9 @@
     modified.
   * Bug fix for listing backups created with split_vss=1.
   * Bug fix for Debian init do_stop() function from Peter Maloney.
+  * Bug fix for resuming backups where a file to patch has already been
+    hard linked into place. Also get the client to report a more helpful
+    message if any similar problem happens.
 
 2013-01-02 Changes in burp-1.3.22:
   * Contributions from Avi Rozen:
