--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@
   * Bug fix for resuming backups where a file to patch has already been
     hard linked into place. Also get the client to report a more helpful
     message if any similar problem happens.
+  * Rework the test script so that it can test Windows clients.
 
 2013-01-02 Changes in burp-1.3.22:
   * Contributions from Avi Rozen:
