--- a/test/README
+++ b/test/README
@@ -8,14 +8,19 @@ It will then run through some basic tests, running the server and client on
 the same machine.
 
 
-
-WINDOWS TEST NOT QUITE WORKING YET.
+WINDOWS
 
 To run an automatic test of Windows, you need to set up cygwin on your Windows
-machine, and it needs to be a recent update of cygwin. I got it working with
-the 2013-01-11 snapshot. You need to setup automatic log in via ssh to the
-Windows machine. If your cygwin isn't new enough, the automatic log in will
-not have all the privileges needed to install the Windows client.
+machine. It needs to include openssh-server.
+The user that you ssh in as needs to have administrator privileges.
+An annoying feature/bug is that using ssh keys to log in without a password
+means that you don't actually get full privileges.
+This means that the test script needs to be given the password, which it
+uses in an 'expect' script to run commands on the Windows machine.
+This means that the password will appear on the Linux machine in 'ps' type
+lists. So, be mindful. This is acceptable for me, because my Windows machine
+exists solely to run burp tests and I don't use the password for it anywhere
+else.
 
-Be aware that the automatic Windows test will delete any existing burp
-installation.
+You need to get the clock on the Windows machine to be close to the clock
+on the server, otherwise you will have certificate problems.
