--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,10 +5,12 @@
   * Bug fix for listing backups created with split_vss=1.
   * Bug fix for restoring uncompressed encrypted backups created with
     split_vss=1.
+  * Bug fix for making backups with min_file_size and split_vss=1.
   * Bug fix for Debian init do_stop() function from Peter Maloney.
   * Bug fix for resuming backups where a file to patch has already been
     hard linked into place. Also get the client to report a more helpful
     message if any similar problem happens.
+  * Bug fix for signal handler race conditions.
   * Rework the test script so that it can test Windows clients.
 
 2013-01-02 Changes in burp-1.3.22:
