Bug fix for the forkchild child not exiting when execv fails. Changed the run_script() code to take an array. Added server_script_pre_notify and server_script_post_notify options.

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -321,17 +321,26 @@ Path to a script to run on the server after each successfully authenticated conn
 \fBserver_script_pre_arg=[string]\fR
 A user-definable argument to the server pre script. You can have many of these.
 .TP
+\fBserver_script_pre_notify=[0|1]\fR
+Turn on to send a notification email when the server pre script returns non-zero. The default is off. Most people will not want this turned on because clients usually contact the server at 20 minute intervals and this could cause a lot of emails to be generated. Requires the notify_failure options to be set.
+.TP
 \fBserver_script_post=[path]\fR
 Path to a script to run on the server before the client disconnects. The arguments to it are 'post', '(client command)', 'reserved3' to 'reserved5', and then arguments defined by server_script_post_arg. This command and related options can be overriddden by the client configuration files in clientconfdir on the server.
 .TP
 \fBserver_script_post_arg=[string]\fR
 A user-definable argument to the server post script. You can have many of these.
 .TP
+\fBserver_script_post_notify=[0|1]\fR
+Turn on to send a notification email when the server post script returns non-zero. The default is off. Requires the notify_failure options to be set.
+.TP
 \fBserver_script=[path]\fR
 You can use this to save space in your config file when you want to run the same server script twice. It overrides server_script_pre and server_script_post. This command and related options can be overriddden by the client configuration files in clientconfdir on the server.
 .TP
 \fBserver_script_arg=[path]\fR
 Goes with server_script and overrides server_script_pre_arg and server_script_post_arg.
+.TP
+\fBserver_script_notify=[0|1]\fR
+Turn on to send a notification emails when the server pre and post scripts return non-zero. The default is off. Requires the notify_failure options to be set.
 .TP
 \fBserver_script_post_run_on_fail=[0|1]\fR
 If this is set to 1, server_script_post will always be run. The default is 0, which means that if the task asked for by the client fails, server_script_post will not be run.
@@ -579,10 +588,13 @@ Additionally, the following options can be overridden here for each client:
 \fBdedup_group\fR
 \fBserver_script_pre\fR
 \fBserver_script_pre_arg\fR
+\fBserver_script_pre_notify\fR
 \fBserver_script_post\fR
 \fBserver_script_post_arg\fR
+\fBserver_script_post_notify\fR
 \fBserver_script\fR
 \fBserver_script_arg\fR
+\fBserver_script_notify\fR
 \fBserver_script_post_run_on_fail\fR
 .TP
 Additionally, the includes and excludes can be overridden here, as described in the section above.
