--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,6 +11,9 @@
     hard linked into place. Also get the client to report a more helpful
     message if any similar problem happens.
   * Bug fix for signal handler race conditions.
+  * Bug fix for the forkchild child not exiting when execv fails.
+  * Changed the run_script() code to take an array.
+  * Added server_script_pre_notify and server_script_post_notify options.
   * Rework the test script so that it can test Windows clients.
 
 2013-01-02 Changes in burp-1.3.22:
