--- a/CHANGELOG
+++ b/CHANGELOG
@@ -15,6 +15,8 @@
   * Changed the run_script() code to take an array.
   * Added server_script_pre_notify and server_script_post_notify options.
   * Rework the test script so that it can test Windows clients.
+  * Attempt a Windows signal handler to try to shut VSS down nicely on certain
+    signals, such as Ctrl-C.
 
 2013-01-02 Changes in burp-1.3.22:
   * Contributions from Avi Rozen:
