--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,6 +17,8 @@
   * Rework the test script so that it can test Windows clients.
   * Attempt a Windows signal handler to try to shut VSS down nicely on certain
     signals, such as Ctrl-C.
+  * Include an example server side offsite rsync backup script. This is not
+    quite working properly, but it may still be useful.
 
 2013-01-02 Changes in burp-1.3.22:
   * Contributions from Avi Rozen:
