--- a/CHANGELOG
+++ b/CHANGELOG
@@ -19,6 +19,7 @@
     signals, such as Ctrl-C.
   * Include an example server side offsite rsync backup script. This is not
     quite working properly, but it may still be useful.
+  * Avi Rozen's fix to stop Windows from going to sleep during a backup.
 
 2013-01-02 Changes in burp-1.3.22:
   * Contributions from Avi Rozen:
