--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
   * Avi Rozen's valgrind cleanup. Includes a fix for a bug in restore_client.c
     where overwrite_ok checked the wrong stat struct when considering a FIFO.
+  * Add '-v' option to bedup (output the names of duplicate files).
+  * Add '-d' option to bedup (delete duplicates instead of hardlinking - not
+    for use on burp storage directories).
 
 2013-01-29 Changes in burp-1.3.24:
   * Bug fix for strip_vss/split_vss truncating backups of changed files on
