--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,75 @@
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 05 Mar 2013 15:40:50 +0100
+
+burp (1.3.26-1) unstable; urgency=low
+
+  * When a read_blockdev option matches a symlink, backup the destination as
+    a raw block device.
+  * Avi Rozen's valgrind cleanup. Includes a fix for a bug in restore_client.c
+    where overwrite_ok checked the wrong stat struct when considering a FIFO.
+  * Add '-v' option to bedup (output the names of duplicate files).
+  * Add '-d' option to bedup (delete duplicates instead of hardlinking - not
+    for use on burp storage directories).
+
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 05 Mar 2013 15:26:40 +0100
+
+burp (1.3.24-1) unstable; urgency=low
+
+  * New upstream release version 1.3.24
+  * Bug fix for strip_vss/split_vss truncating backups of changed files on
+    Windows.
+  * Bug fix for autoupgrade failing on Windows if autoupgrade_dir has been
+    modified.
+  * Bug fix for listing backups created with split_vss=1.
+  * Bug fix for restoring uncompressed encrypted backups created with
+    split_vss=1.
+  * Bug fix for making backups with min_file_size and split_vss=1.
+  * Bug fix for Debian init do_stop() function from Peter Maloney.
+  * Bug fix for resuming backups where a file to patch has already been
+    hard linked into place. Also get the client to report a more helpful
+    message if any similar problem happens.
+  * Bug fix for signal handler race conditions.
+  * Bug fix for the forkchild child not exiting when execv fails.
+  * Changed the run_script() code to take an array.
+  * Added server_script_pre_notify and server_script_post_notify options.
+  * Rework the test script so that it can test Windows clients.
+  * Attempt a Windows signal handler to try to shut VSS down nicely on certain
+    signals, such as Ctrl-C.
+  * Include an example server side offsite rsync backup script. This is not
+    quite working properly, but it may still be useful.
+  * Big fix to stop Windows going to sleep during a backup, from Avi Rozen.
+  * unable to set datapath" backup resume bug (Closes: #695641)
+  * spelling error: 'overriddden' (Closes: #685568)
+  * error in client_can_list section  (Closes: #694506)
+
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 29 May 2012 12:45:58 +0200
+
+burp (1.3.22-1) UNRELEASED; urgency=low
+  * New upstream release version 1.3.22
+  * Contributions from Avi Rozen:
+        + Added a '-j' option to format the long file list as JSON. Intended
+          for use with burpfs (https://github.com/ZungBang/burpfs).
+        + Bug fix for list/verify/restore when regex is long and/or contains
+          a colon.
+        + Bug fix for split_vss backups being restored on a linux
+          restore_client with the -f (force) option. Prevents overwrite of the
+          destination file with the vss footer.
+   * Contributions for burp_ca from Patrick Koppen:
+        + Bug fix for the size option.
+        + Use shell numeric comparison instead of string comparison.
+        + Added subjectAltName patch (in case it is needed outside of burp).
+
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Wen, 03 jan 2012 12:00:00 +0200
+
+
+burp (1.3.18-1) UNRELEASED; urgency=low
+
+  * New upstream release version 1.3.18
+  * Bug fix for split/strip_vss = 1 on the client side always causing all files
+    to be backed up.
+  * Make configure report /usr as the default prefix.
+
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 18 dec  2012 12:12:34 +0200
+
 burp (1.3.6-1) UNRELEASED; urgency=low
 
   * New upstream release version 1.3.6
