--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,22 @@
+burp (1.3.26-2) experimental; urgency=low
+
+  * Reformated changelog
+  * Changed copyright from /debian/* from GPL-2 to AGPL-3 
+  * Added Vcs-Browser to control file  
+  * Bumpt dephelper to 9
+  * Bumpt compat to 9
+
+ -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Thu, 07 Mar 2013 14:48:39 +0100
+
 burp (1.3.26-1) unstable; urgency=low
 
-  * When a read_blockdev option matches a symlink, backup the destination as
+  * New upstream release version 1.3.26
+    -  When a read_blockdev option matches a symlink, backup the destination as
     a raw block device.
-  * Avi Rozen's valgrind cleanup. Includes a fix for a bug in restore_client.c
+    - Avi Rozen's valgrind cleanup. Includes a fix for a bug in restore_client.c
     where overwrite_ok checked the wrong stat struct when considering a FIFO.
-  * Add '-v' option to bedup (output the names of duplicate files).
-  * Add '-d' option to bedup (delete duplicates instead of hardlinking - not
+    - Add '-v' option to bedup (output the names of duplicate files).
+    - Add '-d' option to bedup (delete duplicates instead of hardlinking - not
     for use on burp storage directories).
 
  -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 05 Mar 2013 15:26:40 +0100
@@ -13,48 +24,48 @@ burp (1.3.26-1) unstable; urgency=low
 burp (1.3.24-1) unstable; urgency=low
 
   * New upstream release version 1.3.24
-  * Bug fix for strip_vss/split_vss truncating backups of changed files on
-    Windows.
-  * Bug fix for autoupgrade failing on Windows if autoupgrade_dir has been
-    modified.
-  * Bug fix for listing backups created with split_vss=1.
-  * Bug fix for restoring uncompressed encrypted backups created with
-    split_vss=1.
-  * Bug fix for making backups with min_file_size and split_vss=1.
-  * Bug fix for Debian init do_stop() function from Peter Maloney.
-  * Bug fix for resuming backups where a file to patch has already been
-    hard linked into place. Also get the client to report a more helpful
-    message if any similar problem happens.
-  * Bug fix for signal handler race conditions.
-  * Bug fix for the forkchild child not exiting when execv fails.
-  * Changed the run_script() code to take an array.
-  * Added server_script_pre_notify and server_script_post_notify options.
-  * Rework the test script so that it can test Windows clients.
-  * Attempt a Windows signal handler to try to shut VSS down nicely on certain
-    signals, such as Ctrl-C.
-  * Include an example server side offsite rsync backup script. This is not
-    quite working properly, but it may still be useful.
-  * Big fix to stop Windows going to sleep during a backup, from Avi Rozen.
-  * unable to set datapath" backup resume bug (Closes: #695641)
-  * spelling error: 'overriddden' (Closes: #685568)
-  * error in client_can_list section  (Closes: #694506)
+    - Bug fix for strip_vss/split_vss truncating backups of changed files on
+      Windows.
+    - Bug fix for autoupgrade failing on Windows if autoupgrade_dir has been
+      modified.
+    - Bug fix for listing backups created with split_vss=1.
+    - Bug fix for restoring uncompressed encrypted backups created with
+      split_vss=1.
+    - Bug fix for making backups with min_file_size and split_vss=1.
+    - Bug fix for Debian init do_stop() function from Peter Maloney.
+    - Bug fix for resuming backups where a file to patch has already been
+      hard linked into place. Also get the client to report a more helpful
+      message if any similar problem happens.
+    - Bug fix for signal handler race conditions.
+    - Bug fix for the forkchild child not exiting when execv fails.
+    - Changed the run_script() code to take an array.
+    - Added server_script_pre_notify and server_script_post_notify options.
+    - Rework the test script so that it can test Windows clients.
+    - Attempt a Windows signal handler to try to shut VSS down nicely on certain
+      signals, such as Ctrl-C.
+    - Include an example server side offsite rsync backup script. This is not
+      quite working properly, but it may still be useful.
+    - Big fix to stop Windows going to sleep during a backup, from Avi Rozen.
+    - unable to set datapath" backup resume bug (Closes: #695641)
+    - spelling error: 'overriddden' (Closes: #685568)
+    - error in client_can_list section  (Closes: #694506)
 
- -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 29 May 2012 12:45:58 +0200
+ - - Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 29 May 2012 12:45:58 +0200
 
 burp (1.3.22-1) UNRELEASED; urgency=low
   * New upstream release version 1.3.22
-  * Contributions from Avi Rozen:
-        + Added a '-j' option to format the long file list as JSON. Intended
-          for use with burpfs (https://github.com/ZungBang/burpfs).
-        + Bug fix for list/verify/restore when regex is long and/or contains
-          a colon.
-        + Bug fix for split_vss backups being restored on a linux
-          restore_client with the -f (force) option. Prevents overwrite of the
+    - Contributions from Avi Rozen:
+	+ Added a '-j' option to format the long file list as JSON. Intended
+	  for use with burpfs (https://github.com/ZungBang/burpfs).
+	+ Bug fix for list/verify/restore when regex is long and/or contains
+	  a colon.
+	+ Bug fix for split_vss backups being restored on a linux
+    	  restore_client with the -f (force) option. Prevents overwrite of the
           destination file with the vss footer.
-   * Contributions for burp_ca from Patrick Koppen:
-        + Bug fix for the size option.
-        + Use shell numeric comparison instead of string comparison.
-        + Added subjectAltName patch (in case it is needed outside of burp).
+     - Contributions for burp_ca from Patrick Koppen:
+	+ Bug fix for the size option.
+	+ Use shell numeric comparison instead of string comparison.
+	+ Added subjectAltName patch (in case it is needed outside of burp).
 
  -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Wen, 03 jan 2012 12:00:00 +0200
 
@@ -62,11 +73,12 @@ burp (1.3.22-1) UNRELEASED; urgency=low
 burp (1.3.18-1) UNRELEASED; urgency=low
 
   * New upstream release version 1.3.18
-  * Bug fix for split/strip_vss = 1 on the client side always causing all files
+    - Bug fix for split/strip_vss = 1 on the client side always causing all files
     to be backed up.
-  * Make configure report /usr as the default prefix.
+    - Make configure report /usr as the default prefix.
 
  -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Tue, 18 dec  2012 12:12:34 +0200
+
 
 burp (1.3.6-1) UNRELEASED; urgency=low
 
@@ -83,15 +95,15 @@ burp (1.3.4-2) unstable; urgency=low
 burp (1.3.4-1) unstable; urgency=low
 
   * New upstream release version 1.3.3
-  * Fixed make error during build process
-  * Fixed compression directive not fully functional only numeric value
-    allowed Debian bug: (Closes: #665843)
-  * Fix "Build of version 1.3.2 failing"  (Closes: #669107)
-  * Tidy up "Raw partition" (Closes: #670598)
-  * Prevent client from browsing backups (Closes: #670599)
-  * Prevent client from running a restore (Closes: #670600)
-  * Fix "Document or implement ability to prevent *client* from initiating
-     manual backup (Closes: #670601)
+    - Fixed make error during build process
+    - Fixed compression directive not fully functional only numeric value
+      allowed Debian bug: (Closes: #665843)
+    - Fix "Build of version 1.3.2 failing"  (Closes: #669107)
+    - Tidy up "Raw partition" (Closes: #670598)
+    - Prevent client from browsing backups (Closes: #670599)
+    - Prevent client from running a restore (Closes: #670600)
+    - Fix "Document or implement ability to prevent *client* from initiating
+      manual backup (Closes: #670601)
 
  -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Sat, 28 Apr 2012 09:22:05 +0200
 
@@ -99,33 +111,34 @@ burp (1.3.4-1) unstable; urgency=low
 burp (1.3.1-1) unstable; urgency=low
 
   * New upstream release version 1.3.1
-  * Switched to Standards-Version 3.9.3 Debian bug: (Closes: #661001)
-  * respect noopt in DEB_BUILD_OPTIONS. Debian bug: (Closes: #661281)
-  * Fixed typo in logrotate script Debian bug: (Closes: #660964)
-  * added debug package Debian bug: (Closes: #661267)
-  * Add 'exclude_fs =' option for Linux so that you can skip partitions
-    types (for example, tmpfs) without generating warnings.
-  * If recovery method 'resume' is set, but the includes/excludes change,
-    switch to 'use', then start a new backup.
-  * In the tests, check to see whether it looks like the server has finished
-    the backup before moving on, rather than just waiting a set amount of time.
-  * Remove embedded uthash code. It will need to be installed as a dependency.
-    For example, in Debian, you might run 'apt-get install uthash-dev'.
-  * Add Bas van den Dikkenberg's tweaks for getting burp into official Debian
-    and Ubuntu repositories. Burp is now in debian sid and ubuntu precise.
-  * Make the server tell the client what extra_comms features it supports, so
-    that, in future, old servers are more likely to work with new clients.
-  * Improve 'make clean'.
-  * Add option to strip off leading path components on restore.
-  * Fix segfault that was happening on the server when SSL_accept() failed.
-  * Move burp and bedup to /usr/sbin (you need to check that any cron jobs
-    are pointing there too).
-  * Moved list of things to do to https://github.com/grke/burp/issues
+    - Switched to Standards-Version 3.9.3 Debian bug: (Closes: #661001)
+    - respect noopt in DEB_BUILD_OPTIONS. Debian bug: (Closes: #661281)
+    - Fixed typo in logrotate script Debian bug: (Closes: #660964)
+    - added debug package Debian bug: (Closes: #661267)
+    - Add 'exclude_fs =' option for Linux so that you can skip partitions
+      types (for example, tmpfs) without generating warnings.
+    - If recovery method 'resume' is set, but the includes/excludes change,
+      switch to 'use', then start a new backup.
+    - In the tests, check to see whether it looks like the server has finished
+      the backup before moving on, rather than just waiting a set amount of time.
+    - Remove embedded uthash code. It will need to be installed as a dependency.
+      For example, in Debian, you might run 'apt-get install uthash-dev'.
+    - Add Bas van den Dikkenberg's tweaks for getting burp into official Debian
+      and Ubuntu repositories. Burp is now in debian sid and ubuntu precise.
+    - Make the server tell the client what extra_comms features it supports, so
+      that, in future, old servers are more likely to work with new clients.
+    - Improve 'make clean'.
+    - Add option to strip off leading path components on restore.
+    - Fix segfault that was happening on the server when SSL_accept() failed.
+    - Move burp and bedup to /usr/sbin (you need to check that any cron jobs
+      are pointing there too).
+    - Moved list of things to do to https://github.com/grke/burp/issues
 
  -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Mon, 27 Feb 2012 15:34:17 +0100
 
 burp (1.3.0+20120214git-1) unstable; urgency=low
 
+  * New version from GIT
   * Compilation bug solved for in farm (Closes: #659692)
   * New upstream release from GIT branch 1.3.1 on advise of author
   * Add 'exclude_fs =' option for Linux so that you can skip partitions
@@ -148,7 +161,7 @@ burp (1.3.0-3) unstable; urgency=low
  -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Sun, 12 Feb 2012 14:50:29 +0100
 
 burp (1.3.0-2) unstable; urgency=low
-
+    
   * added forwarded header to patches
   * removed changelog entries from patches
   * removed debian/README (Closes: #659453)
@@ -157,7 +170,7 @@ burp (1.3.0-2) unstable; urgency=low
   * added extra logrotate for /var/log/burp-client
   * changed /var/run to /run (Closes: #659464)
   * thanks to Justin B Rye from debian-l10n-english team for
-    helping with linguistic support
+     helping with linguistic support
 
  -- Bastiaan Franciscus van den Dikkenberg <bas@dikkenberg.net>  Sat, 11 Feb 2012 23:48:03 +0100
 
