Escaped minus sign in man pages

--- a/manpages/burp.8
+++ b/manpages/burp.8
@@ -550,7 +550,7 @@ Open all block devices for reading and back up the contents as if they were regu
 When backing up Windows computers, this option allows you to save the VSS header data separate from the file data. The default is off, which means that the VSS header data is saved prepended to the file data.
 .TP
 \fBstrip_vss=[0|1]\fR
-When backing up Windows computers, this option allows you to prevent the VSS header data being backed up. The default is off. To restore a backup that has no VSS information on Windows, you need to give the client the '-x' command line option.
+When backing up Windows computers, this option allows you to prevent the VSS header data being backed up. The default is off. To restore a backup that has no VSS information on Windows, you need to give the client the '\-x' command line option.
 
 .SH SERVER CLIENTCONFDIR FILE
 .TP
