--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+  * Add the ability to resume partially transferred files.
   * Make sure 'timer conditions not met' message appears on the client.
 
 2013-03-05 Changes in burp-1.3.26:
