--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+  * Add a warning when run on Windows without admin privileges.
+
 2013-03-30 Changes in burp-1.3.28:
   * Add the ability to resume partially transferred files.
   * Make sure 'timer conditions not met' message appears on the client.
