--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
   * Perform fewer lstat()s on systems that support d_type (ie most Linux
     systems), in order to speed up certain operations.
   * Allow _FORTIFY_SOURCE to work.
+  * Fix problem with burp_ca.bat and repeated field names in burp.conf.
 
 2013-03-30 Changes in burp-1.3.28:
   * Add the ability to resume partially transferred files.
