--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@
     systems), in order to speed up certain operations.
   * Allow _FORTIFY_SOURCE to work.
   * Fix problem with burp_ca.bat and repeated field names in burp.conf.
+  * Put registry keys back in the Windows installer.
 
 2013-03-30 Changes in burp-1.3.28:
   * Add the ability to resume partially transferred files.
