--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,8 @@
   * Indicate the backups that are deletable.
   * Add a client option for deleting deletable backups.
   * Add a 'client_can_delete' option on the server.
+  * Fix for using the wrong lock directory when 'directory' is overridden for
+    a client.
 
 2013-03-30 Changes in burp-1.3.28:
   * Add the ability to resume partially transferred files.
