--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+2013-04-02 Changes in burp-1.3.30:
   * Add a warning when run on Windows without admin privileges.
   * Perform fewer lstat()s on systems that support d_type (ie most Linux
     systems), in order to speed up certain operations.
